--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="styles.css">
+		<link rel="import" href="main.html">
 		<title> Ogre Central </title>
 	</head>
 	<body>
-	    <h1> Welcome </h1>
-	    <p> Below is the ogre of ogreness look at how sexy he is, </p>
-	    <p> he has been on many journeys, but never has he been on this one. </p>
-	    <p>Testing this commit</p>
+		var getImport = document.quearySelector('link[rel=import]');
+		var getContent = getImport.import.*;
+		document.body.appendChild(document.importNode(getContent, true));
 	</body>
 </html>
