--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css">
-		<link rel="import" href="main.html">
+		<ui:include src="main.html" />
 		<title> Ogre Central </title>
 	</head>
-	<body>
-		var getImport = document.quearySelector('link[rel=import]');
-		var getContent = getImport.import.*;
-		document.body.appendChild(document.importNode(getContent, true));
-	</body>
 </html>
