--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<frameset rows="20%,20%,20%,20%,20%"> 
+	<frame src="main.html"> 
+	</frameset>  
 	<head>
 		<link rel="stylesheet" href="styles.css">
 		<ui:include src="main.html" />
