--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<frameset rows="20%,20%,20%,20%,20%"> 
+	<frameset rows="100%"> 
 	<frame src="main.html"> 
 	</frameset>  
 </html>
