--- a/main.html
+++ b/main.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css">
-		<title> Ogre Central </title>
+		<title> Louis Nieuwoudt </title>
 	</head>
 	<body>
-	    <h1> Welcome </h1>
-	    <p> Below is the ogre of ogreness look at how sexy he is, </p>
-	    <p> he has been on many journeys, but never has he been on this one. </p>
-	    <p>Testing this commit</p>
+	    <h1> Hello :) </h1>
+	    <p> This is just a simple website I developed for the<br>
+	    	convenience of parents who would have a further idea<br>
+	    	of who I am and what I do (Basically a resume of sorts)<br>
+	    	 </p>
 	</body>
 </html>
