--- a/main.html
+++ b/main.html
@@ -6,9 +6,77 @@
 	</head>
 	<body>
 	    <h1> Hello :) </h1>
-	    <p> This is just a simple website I developed for the<br>
+	    	<p1> 
+	    	This is just a simple website I developed for the<br>
 	    	convenience of parents who would have a further idea<br>
 	    	of who I am and what I do (Basically a resume of sorts)<br>
-	    	 </p>
+	    	</p1>
+
+	    <h2> Profile: </h2>
+	    	<p2>
+	    	An enthusiastic and hardworking university student and<br>
+	    	keen to gain some more practical work in the real world.<br>
+	    	Always interested in learning new methods and strategies<br> 
+	    	to go about problems and achieving a suitable<br> 
+	    	solution. Reliable, trustworthy and responsible. Enjoy<br>
+			working with people, and always excited to broaden my<br>
+			knowledge when it involves any computer skills.
+	    	</p2> 
+
+	    <h2> Education: </h2>
+	    	<p2>
+	    	Tamborine Mountain State Highschool 2009 - 2012 <br>
+	    	University of Queensland 2013 - 
+	    	</p2> 
+	    	<p2>
+	    	Current Software Engineering (Honours) student.
+	    	</p2>
+
+	    <h2> Experience: </h2>
+	    	<p2>
+	    	ALK Emboridery - Store Manager <br>
+	    	Junior Engineers - Software Instructor (2014 - Gained a blue card to
+	    	work with kids aged between 6 and 13)<br>
+	    	Fridays Riverside - Bar|Restaurant|Club, worked as Bar-back
+	    	</p2>
+
+	    <h2> Skills: </h2>
+	    	<p2>
+	    	Independent and team worker<br>
+			Good people/social skills<br>
+			Proficient with computers<br>
+			Willing to learn<br>
+			Like new challenges<br>
+			Client focused <br>
+			Fluent in more than one language<br>
+			Knows a various amount of programming languages;<br>
+
+				<p2 class = "tab">
+				Python<br>
+				Java<br>
+				C<br>
+				SQL<br>
+				Html<br>
+				Css<br>
+				Swift<br>
+				</p2>
+
+	    	</p2>
+
+	    <h2> Availability: </h2>
+	    	<p2>
+			All week besides Wednesdays and Thursdays<br>
+			Wednesdays and Thursdays I'm available after 7:30pm<br>
+	    	</p2>
+
 	</body>
 </html>
+
+
+
+
+
+
+
+
+
