--- a/main.html
+++ b/main.html
@@ -5,10 +5,10 @@
 		<title> Louis Nieuwoudt </title>
 	</head>
 	<body>
-	    <h1> Hello :) </h1>
+	    <h1> Hello and welcome. I'm Louis Nieuwoudt :) </h1>
 	    	<p1> 
 	    	This is just a simple website I developed for the<br>
-	    	convenience of parents who would have a further idea<br>
+	    	convenience of parents who would like to have a further idea<br>
 	    	of who I am and what I do (Basically a resume of sorts)<br>
 	    	</p1>
 
@@ -51,7 +51,7 @@
 			Fluent in more than one language<br>
 			Knows a various amount of programming languages;<br>
 
-				<p2 class = "tab">
+				<p3 class = "tab">
 				Python<br>
 				Java<br>
 				C<br>
@@ -59,7 +59,7 @@
 				Html<br>
 				Css<br>
 				Swift<br>
-				</p2>
+				</p3>
 
 	    	</p2>
 
