--- a/main.html
+++ b/main.html
@@ -5,6 +5,12 @@
 		<title> Louis Nieuwoudt </title>
 	</head>
 	<body>
+		<div id="header">
+			<p id="name">Baby Sitting</p>
+			<a href="mailto:louis.nieu@gmail.com"><p id="email"> My Email: louis.nieu@gmail.com</p></a>
+		</div>
+
+		<div class="right">
 	    <h1> Hello and welcome. I'm Louis Nieuwoudt :) </h1>
 	    	<p1> 
 	    	This is just a simple website I developed for the<br>
@@ -25,49 +31,50 @@
 
 	    <h2> Education: </h2>
 	    	<p2>
-	    	Tamborine Mountain State Highschool 2009 - 2012 <br>
-	    	University of Queensland 2013 - 
+	    	&#0149 Tamborine Mountain State Highschool 2009 - 2012 <br>
+	    	&#0149 University of Queensland 2013 - <br>
 	    	</p2> 
-	    	<p2>
-	    	Current Software Engineering (Honours) student.
-	    	</p2>
+	    	<p3 class = "tab"> &#8883 Current Software Engineering (Honours) student. </p3>
 
 	    <h2> Experience: </h2>
 	    	<p2>
-	    	ALK Emboridery - Store Manager <br>
-	    	Junior Engineers - Software Instructor (2014 - Gained a blue card to
-	    	work with kids aged between 6 and 13)<br>
-	    	Fridays Riverside - Bar|Restaurant|Club, worked as Bar-back
+	    	&#0149 ALK Emboridery - Store Manager <br>
+	    	&#0149 Junior Engineers - Software Instructor (2014 - Acquired a Blue Card to 
+	    	work with kids)<br>
+	    	&#0149 Fridays Riverside - Bar | Restaurant | Club, worked as Bar-back
 	    	</p2>
 
 	    <h2> Skills: </h2>
 	    	<p2>
-	    	Independent and team worker<br>
-			Good people/social skills<br>
-			Proficient with computers<br>
-			Willing to learn<br>
-			Like new challenges<br>
-			Client focused <br>
-			Fluent in more than one language<br>
-			Knows a various amount of programming languages;<br>
+	    	&#0149 Independent and team worker<br>
+			&#0149 Good people/social skills<br>
+			&#0149 Proficient with computers<br>
+			&#0149 Willing to learn<br>
+			&#0149 Like new challenges<br>
+			&#0149 Client focused <br>
+			&#0149 Fluent in more than one language<br>
+			&#0149 Knows a various amount of programming languages;<br>
 
-				<p3 class = "tab">
-				Python<br>
-				Java<br>
-				C<br>
-				SQL<br>
-				Html<br>
-				Css<br>
-				Swift<br>
-				</p3>
+				<p3 class = "tab"> &#8883 Python<br> </p3>
+				<p3 class = "tab"> &#8883 Java<br> </p3>
+				<p3 class = "tab"> &#8883 C<br> </p3>
+				<p3 class = "tab"> &#8883 SQL<br> </p3>
+				<p3 class = "tab"> &#8883 Html<br> </p3>
+				<p3 class = "tab"> &#8883 Css<br> </p3>
+				<p3 class = "tab"> &#8883 Swift<br> </p3>
 
 	    	</p2>
 
 	    <h2> Availability: </h2>
 	    	<p2>
-			All week besides Wednesdays and Thursdays<br>
-			Wednesdays and Thursdays I'm available after 7:30pm<br>
+			&#0149 All day all week besides Wednesdays and Thursdays<br>
+			&#0149 Wednesdays and Thursdays I'm available after 7:30pm<br>
 	    	</p2>
+	    </div>
+
+	    <div id="footer">
+			<p>Number should be located on the pamflet where you saw this web address, otherwise my email is located in the top right :)</p>
+		</div>
 
 	</body>
 </html>
