--- a/main.html
+++ b/main.html
@@ -11,22 +11,57 @@
 		</div>
 
 		<div class="right">
+
+			<section class="slideshow">
+  				<div class="container">
+<!--  					<button class="next">Next</button>
+  					<button class="prev">Previous</button> -->
+
+	   				<div style="display: inline-block;">
+	      				<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11990621_10206549244243183_1669815255261656006_n.jpg?oh=493923b1c3a5370a697ad837978ca35f&oe=57274EF9"/>
+	    			</div>
+	    			<div>
+	    				<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xfa1/t31.0-8/920783_10207270756720544_7285840949908517739_o.jpg"/>
+	    			</div>
+	   				 <div>
+	     				<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/12493793_10207289017257046_1497042159034158507_o.jpg"/>
+	    			</div>
+				    <div>
+				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xfp1/t31.0-8/12473893_10207297492348918_8572965221856549992_o.jpg"/>
+				    </div>
+				    <div>
+				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/920686_10207167913229521_3373173721533340689_o.jpg"/>
+				    </div>
+				    <div>
+				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/12593988_10207374748920284_1182856638858555547_o.jpg"/>
+				    </div>
+
+			  	</div>
+			</section>
+
+
+			<!-- loads the necceasry library to use for the scripts (So that "$" isn't unkown) -->
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+			<script type="text/javascript" src="slideshow.js" ></script>
+
+
 	    <h1> Hello and welcome. I'm Louis Nieuwoudt :) </h1>
 	    	<p1> 
-	    	This is just a simple website I developed for the<br>
+	    	This is just a simple website I developed for the
 	    	convenience of parents who would like to have a further idea<br>
-	    	of who I am and what I do (Basically a resume of sorts)<br>
+	    	of who I am and what I do (Basically a resume of sorts). <br>
 	    	</p1>
 
 	    <h2> Profile: </h2>
 	    	<p2>
-	    	An enthusiastic and hardworking university student and<br>
-	    	keen to gain some more practical work in the real world.<br>
-	    	Always interested in learning new methods and strategies<br> 
+	    	An enthusiastic and hardworking university student and
+	    	keen to gain some more practical work in the real<br>
+	    	world. Always interested in learning new methods and strategies
 	    	to go about problems and achieving a suitable<br> 
-	    	solution. Reliable, trustworthy and responsible. Enjoy<br>
-			working with people, and always excited to broaden my<br>
-			knowledge when it involves any computer skills.
+	    	solution. Reliable, trustworthy and responsible. Enjoy
+			working with kids of any age (aslong as they're potty<br>
+			trained). As I'm studying engineering which is a heavy maths based degree,
+			I should be able to help kids<br> with any maths homework as a bonus.
 	    	</p2> 
 
 	    <h2> Education: </h2>
@@ -63,7 +98,7 @@
 				<p3 class = "tab"> &#8883 Css<br> </p3>
 				<p3 class = "tab"> &#8883 Swift<br> </p3>
 
-	    	</p2>
+	    	</p2> 
 
 	    <h2> Availability: </h2>
 	    	<p2>
