--- a/main.html
+++ b/main.html
@@ -54,14 +54,15 @@
 
 	    <h2> Profile: </h2>
 	    	<p2>
-	    	An enthusiastic and hardworking university student and
-	    	keen to gain some more practical work in the real<br>
-	    	world. Always interested in learning new methods and strategies
-	    	to go about problems and achieving a suitable<br> 
-	    	solution. Reliable, trustworthy and responsible. Enjoy
+	    	An enthusiastic and hardworking university student<br>
+	    	and	keen to gain some more practical work in the real<br>
+	    	world. Always interested in learning new methods and<br>
+	    	strategies to go about problems and achieving a suitable<br> 
+	    	solution. Reliable, trustworthy and responsible. Enjoy<br>
 			working with kids of any age (aslong as they're potty<br>
-			trained). As I'm studying engineering which is a heavy maths based degree,
-			I should be able to help kids<br> with any maths homework as a bonus.
+			trained). As I'm studying engineering which is a heavy<br>
+			maths based degree, I should be able to help kids<br>
+			with any maths homework as a bonus.
 	    	</p2> 
 
 	    <h2> Education: </h2>
@@ -74,8 +75,8 @@
 	    <h2> Experience: </h2>
 	    	<p2>
 	    	&#0149 ALK Emboridery - Store Manager <br>
-	    	&#0149 Junior Engineers - Software Instructor (2014 - Acquired a Blue Card to 
-	    	work with kids)<br>
+	    	&#0149 Junior Engineers - Software Instructor (2014 - Acquired<br>
+	    	a Blue Card to work with kids)<br>
 	    	&#0149 Fridays Riverside - Bar | Restaurant | Club, worked as Bar-back
 	    	</p2>
 
