--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="iphone" href="iphoneStyle.css">
 		<title> Louis Nieuwoudt </title>
 	</head>
 	<body>
