--- a/main.html
+++ b/main.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css">
-
 		<title> Louis Nieuwoudt </title>
 	</head>
 	<body>
@@ -34,7 +33,7 @@
 				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/920686_10207167913229521_3373173721533340689_o.jpg"/>
 				    </div>
 				    <div>
-				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/12593988_10207374748920284_1182856638858555547_o.jpg"/>
+				      	<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/12593988_10207374748920284_1182856638858555547_o.jpg"/ id="bigimg">
 				    </div>
 
 			  	</div>
