--- a/main.html
+++ b/main.html
@@ -62,7 +62,8 @@
 			working with kids of any age (aslong as they're potty<br>
 			trained). As I'm studying engineering which is a heavy<br>
 			maths based degree, I should be able to help kids<br>
-			with any maths homework as a bonus.
+			with any maths homework as a bonus or even a little <br>
+			coding/programming if they'd like.
 	    	</p2> 
 
 	    <h2> Education: </h2>
