--- a/main.html
+++ b/main.html
@@ -55,16 +55,28 @@
 	    <h2> Profile: </h2>
 	    	<p2>
 	    	An enthusiastic and hardworking university student<br>
-	    	and	keen to gain some more practical work in the real<br>
-	    	world. Always interested in learning new methods and<br>
-	    	strategies to go about problems and achieving a suitable<br> 
-	    	solution. Reliable, trustworthy and responsible. Enjoy<br>
-			working with kids of any age (aslong as they're potty<br>
-			trained). As I'm studying engineering which is a heavy<br>
-			maths based degree, I should be able to help kids<br>
-			with any maths homework as a bonus or even a little <br>
-			coding/programming if they'd like.
+	    	who's also very energetic and sporty. Would be willing<br>
+	    	to drive kids to and from sport or even do school pick-ups<br>
+	    	and drop offs. I'm a safe driver with my opens licence<br>
+	    	as well. Among many good qualities, I'm very Reliable,<br>
+	    	trustworthy and responsible. I Enjoy working with kids<br>
+	    	of any age (aslong as they're potty trained).
+	    	</p2>
+	    	<p2> 
+	    	As I'm currently udergoing study in engineering (software)<br>
+	    	I'd also be able to tutor kids with any maths homework<br>
+	    	or even some software programming if desired. Besides all<br>
+	    	the boring details, I also enjoy disney movies as well as<br>
+	    	playing board games (extremely good at chess if you'd desire<br>
+	    	your kid to learn). I'd also be able to take the kids out<br>
+	    	to movie/put-put nights if the parents would like.<br>
 	    	</p2> 
+	    	<p2>
+	    	I'll be asking an hourly rate of;
+	    	<ul>
+	    		20$ :)
+	    	</ul>
+	    	</p2>
 
 	    <h2> Education: </h2>
 	    	<p2>
