--- a/main.html
+++ b/main.html
@@ -60,8 +60,9 @@
 	    	and drop offs. I'm a safe driver with my opens licence<br>
 	    	as well. Among many good qualities, I'm very Reliable,<br>
 	    	trustworthy and responsible. I Enjoy working with kids<br>
-	    	of any age (aslong as they're potty trained).
+	    	of any age (aslong as they're potty trained).<br><br>
 	    	</p2>
+
 	    	<p2> 
 	    	As I'm currently udergoing study in engineering (software)<br>
 	    	I'd also be able to tutor kids with any maths homework<br>
@@ -69,12 +70,12 @@
 	    	the boring details, I also enjoy disney movies as well as<br>
 	    	playing board games (extremely good at chess if you'd desire<br>
 	    	your kid to learn). I'd also be able to take the kids out<br>
-	    	to movie/put-put nights if the parents would like.<br>
+	    	to movie/put-put nights if the parents would like.<br><br>
 	    	</p2> 
 	    	<p2>
 	    	I'll be asking an hourly rate of;
 	    	<ul>
-	    		20$ :)
+	        &#0149 20$ Which could be negotiable :)
 	    	</ul>
 	    	</p2>
 
