--- a/main.html
+++ b/main.html
@@ -54,28 +54,29 @@
 
 	    <h2> Profile: </h2>
 	    	<p2>
-	    	An enthusiastic and hardworking university student<br>
-	    	who's also very energetic and sporty. Would be willing<br>
+	    	I'm an enthusiastic and hardworking university student<br>
+	    	who's also very energetic and sporty. Willing<br>
 	    	to drive kids to and from sport or even do school pick-ups<br>
-	    	and drop offs. I'm a safe driver with my opens licence<br>
-	    	as well. Among many good qualities, I'm very Reliable,<br>
-	    	trustworthy and responsible. I Enjoy working with kids<br>
-	    	of any age (aslong as they're potty trained).<br><br>
+	    	and drop offs. I'm a safe driver on an open licence.<br>
+	    	I'm very reliable, trustworthy and responsible.<br>
+	    	I Enjoy working with kids of any age (as long as they're<br>
+	    	toilet trained).<br><br>
 	    	</p2>
 
 	    	<p2> 
-	    	As I'm currently udergoing study in engineering (software)<br>
-	    	I'd also be able to tutor kids with any maths homework<br>
-	    	or even some software programming if desired. Besides all<br>
-	    	the boring details, I also enjoy disney movies as well as<br>
-	    	playing board games (extremely good at chess if you'd desire<br>
-	    	your kid to learn). I'd also be able to take the kids out<br>
-	    	to movie/put-put nights if the parents would like.<br><br>
+	    	I'm currently doing an engineering (software) degree.<br>
+	    	I'd be able to tutor kids with any maths homework<br>
+	    	or even some software programming if desired.<br>
+	    	I have done this with great success in the past.<br>
+	    	Besides all the boring details, I also enjoy<br>
+	    	Disney movies as well as playing board games<br>
+	    	(extremely good at chess if you'd desire your<br>
+	    	kid to learn).<br><br>
 	    	</p2> 
 	    	<p2>
 	    	I'll be asking an hourly rate of;
 	    	<ul>
-	        &#0149 20$ Which could be negotiable :)
+	        &#0149 20$ :)
 	    	</ul>
 	    	</p2>
 
