--- a/shop.html
+++ b/shop.html
@@ -69,7 +69,7 @@
     <div id="dgShop">
         <div class="container">
             <h1>PRODUCTS</h1>
-            <div class="row">
+            <div class="row1">
                 <br>
                 <br>
                 <div class="col-lg-3 col">
@@ -245,7 +245,7 @@
 
     <div id="dgShop">
         <div class="container">
-            <div class="row"> 
+            <div class="row1"> 
                 <div class="col-lg-3" id="border">
 
                     <h4> Rent or Lease </h4>
