--- a/shop.html
+++ b/shop.html
@@ -1,3 +1,5 @@
+ <!-- Altered/Updated by: Louis Nieuwoudt -->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
