--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<br>
 				<div class="col-lg-2"></div>
 				<div class="col-lg-8" id="white">
-				<p>The clamping system is a new inovation designed and assemebled by our team of engineers. The system is a new modern method that replaces the old robust 'heads' used to emborider caps and other clothing (ie. shirts). The clamping system allows the user to easily unclamp any item from caps to shirts without needing to change the emboridery head to work with the specific item. With the clamping system users easily safe hours worth of time which would've been used to set up various emboridery methods for other items, instead the clamping method <strong>DOES IT ALL</strong></p>
+				<p>The clamping system is a new inovation designed and assemebled by our team of engineers. The system is a new modern method that replaces the old robust 'heads' used to embroider caps and other clothing (ie. shirts). The clamping system allows the user to easily unclamp any item from caps to shirts without needing to change the emboridery head to work with the specific item. With the clamping system users easily safe hours worth of time which would've been used to set up various emboridery methods for other items, instead the clamping method <strong>DOES IT ALL</strong></p>
 				<br>
 				<br>
 				</div>			
