--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title> EMW </title>
+    <title> EMA </title>
 
     <!-- Bootstrap core CNorth Tambourine, Tamborine Mountain QLD 4272S -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Embroidery Machine Warehouse</a></h1>
+			<h1 class="logo"><a href="index.html#home">Embroidery Machines Australia</a></h1>
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
 			<a href="#services" class="smoothScroll">Services</a>
@@ -62,7 +62,7 @@
 	<div id="headerwrap">
 		<div class="container">
 			<br>
-			<h1>Embroidery Machine Warehouse</h1>
+			<h1>Embroidery Machines Australia</h1>
 			<h2>Machines to cut down your workload</h2>
 			<div class="row">
 				<br>
@@ -80,7 +80,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h3>WELCOME TO <bold>EMW</bold>.A WAREHOUSE FOR ALL YOUR EMBOIRDERY <bold>MACHINE NEEDS</bold><br/>
+				<h3>WELCOME TO <bold>EMA</bold>.A WAREHOUSE FOR ALL YOUR EMBOIRDERY <bold>MACHINE NEEDS</bold><br/>
 					IDEAL FOR <bold>SMALL</bold> AND <bold>BIG</bold> COMPANIES LOOKING TO <bold>EXPAND</bold>.
 				</h3>
 				</div>
