--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title> EMW </title>
+    <title> EMA </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -51,7 +51,7 @@
     <!-- Menu -->
     <nav class="menu" id="theMenu">
         <div class="menu-wrap">
-            <h1 class="logo"><a href="index.html#home">Embroidery Machine Warehouse</a></h1>
+            <h1 class="logo"><a href="index.html#home">Embroidery Machines Australia</a></h1>
             <i class="icon-remove menu-close"></i>
             <a href="index.html#home" class="smoothScroll">Home</a>
             <a href="index.html#services" class="smoothScroll">Services</a>
